Corrected emmocheck w --url-from-catalog

--- a/.github/workflows/ci_emmocheck.yml
+++ b/.github/workflows/ci_emmocheck.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Check EMMO
       run: |
-        emmocheck --url_from_catalog --verbose batteryInterface.owl
-        # emmocheck --url_from_catalog --verbose --check-imported batteryInterface.owl
+        emmocheck --url-from-catalog --verbose batteryInterface.owl
+        # emmocheck --url-from-catalog --verbose --check-imported batteryInterface.owl
         # emmo-1.0.0-alpha fails the tests updated for emmo-1.0.0-beta
 
