Changed to BattINFO.ttl for emmocheck in ci

--- a/.github/workflows/ci_emmocheck.yml
+++ b/.github/workflows/ci_emmocheck.yml
@@ -26,4 +26,4 @@ jobs:
 
     - name: Check EMMO
       run: |
-        emmocheck --verbose --url-from-catalog OntoBATT.ttl -s test_namespace
+        emmocheck --verbose --url-from-catalog BattINFO.ttl -s test_namespace
