--- a/.github/workflows/update_pages.yml
+++ b/.github/workflows/update_pages.yml
@@ -52,4 +52,8 @@ jobs:
 
     - name: Update GitHub Pages
       run: |
+        pwd
+        ls
+        ls doc
+        ls doc/ontodoc
         doc/ontodoc/update-pages.sh
