Added a few ci test exceptions

--- a/.github/emmocheck_conf.yml
+++ b/.github/emmocheck_conf.yml
@@ -5,4 +5,8 @@ skip:
 test_quantity_dimension:
   exceptions:
     - BattINFO.ElectroChemicalQuantity
+    - BattINFO.ElectrochemicalKineticQuantity
+    - BattINFO.ElectrochemicalTransportQuantity
     - BattINFO.BatteryQuantity
+    # We ignore reaction rate constant since its dimensionality may vary
+    - BattINFO.ReactionRateConstant
