--- a/.github/emmocheck_conf.yml
+++ b/.github/emmocheck_conf.yml
@@ -4,9 +4,10 @@ skip:
 
 test_quantity_dimension:
   exceptions:
-    - BattINFO.ElectroChemicalQuantity
+    - BattINFO.ElectrochemicalQuantity
     - BattINFO.ElectrochemicalKineticQuantity
     - BattINFO.ElectrochemicalTransportQuantity
+    - BattINFO.ElectrochemicalThermodynamicQuantity
     - BattINFO.BatteryQuantity
     # We ignore reaction rate constant since its dimensionality may vary
     - BattINFO.ReactionRateConstant
