--- a/.github/workflows/update_pages.yml
+++ b/.github/workflows/update_pages.yml
@@ -53,7 +53,11 @@ jobs:
     - name: Update GitHub Pages
       run: |
         pwd
+        echo "=== ls"
         ls
+        echo "=== ls doc"
         ls doc
+        echo "=== ls doc/ontodoc"
         ls doc/ontodoc
+        echo "=== "
         doc/ontodoc/update-pages.sh
