--- a/.github/workflows/update_pages.yml
+++ b/.github/workflows/update_pages.yml
@@ -14,12 +14,6 @@ jobs:
 
     steps:
 
-    - name: Setup git identity
-      run: |
-        git config --global user.email "battinfo.github.action@github.com"
-        git config --global user.name "BattINFO GitHub Action"
-        git config pull.rebase false
-
     - name: Setup Python 3.7
       uses: actions/setup-python@v2
       with:
@@ -47,6 +41,13 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: /home/runner/work/BattINFO
+
+    - name: Setup git identity
+      run: |
+        cd /home/runner/work/BattINFO
+        git config --global user.email "battinfo.github.action@github.com"
+        git config --global user.name "BattINFO GitHub Action"
+        git config pull.rebase false
 
     - name: Checkout GitHub Pages for EMMO-repo
       uses: actions/checkout@v2
