--- a/.github/workflows/update_pages.yml
+++ b/.github/workflows/update_pages.yml
@@ -3,9 +3,12 @@ name: Update GitHub Pages
 on:
   push:
     branches:
-      - 'ontodoc'
+      - 'master'
+    tags:
       - '[0-9]+.[0-9]+.[0-9]+'
       - '[0-9]+.[0-9]+.[0-9]+-*'
+      - 'v[0-9]+.[0-9]+.[0-9]+'
+      - 'v[0-9]+.[0-9]+.[0-9]+-*'
 
 jobs:
 
