Update workflows, dependabot config, and name
Create a `requirements.txt` for Python dependencies. This can be updated
by dependabot and is used by the test files as well as the CI/CD.

Extend dependabot to determine if dependencies should be updated for
Python dependencies.

Clean up workflows.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,9 +1,20 @@
 version: 2
 updates:
+- package-ecosystem: pip
+  directory: "/"
+  schedule:
+    interval: weekly
+    day: monday
+    time: "05:00"
+  # Should be bigger than or equal to the total number of dependencies (currently 2)
+  open-pull-requests-limit: 5
+  target-branch: master
+  labels:
+  - "CI/CD"
 - package-ecosystem: github-actions
   directory: "/"
   schedule:
     interval: daily
   target-branch: master
   labels:
-      - "GitHub Actions"
+  - "CI/CD"
