--- a/.github/workflows/cd_release.yml
+++ b/.github/workflows/cd_release.yml
@@ -63,3 +63,26 @@ jobs:
 
     - name: Update GitHub Pages
       run: ${GITHUB_WORKSPACE}/doc/ontodoc/update-pages.sh
+
+  ontologies:
+    name: Ontologies
+    runs-on: ubuntu-latest
+    needs: documentation
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Setup Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+
+    - name: Install Python dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -U setuptools wheel
+        pip install -r requirements.txt
+
+    - name: Update ontologies
+      run: .github/utils/publish_ontologies.py
