--- a/.github/workflows/cd_release.yml
+++ b/.github/workflows/cd_release.yml
@@ -5,13 +5,14 @@ on:
     types: [published]
   push:
     branches: [master]
-    tags:
-      - 'v?[0-9]+.[0-9]+.[0-9]+'
-      - 'v?[0-9]+.[0-9]+.[0-9]+-*'
 
 env:
   GIT_USER_NAME: BattINFO Developers
   GIT_USER_EMAIL: "BattINFO@big-map.org"
+  ONTODOC_DIR: doc/ontodoc
+  TMP_DIR: tmp
+  PAGES_DIR: gh-pages
+  PUBLISH_ONTOLOGIES_DIR: ontology
 
 jobs:
   documentation:
@@ -53,36 +54,16 @@ jobs:
         git config --global user.name "${GIT_USER_NAME}"
         git config pull.rebase false
 
-    - name: Checkout GitHub Pages for EMMO-repo
+    - name: Checkout GitHub Pages for BattINFO
       uses: actions/checkout@v2
       with:
         ref: gh-pages
-        path: doc/ontodoc/tmp/gh-pages
+        path: ${{ env.ONTODOC_DIR }}/${{ env.TMP_DIR }}/${{ env.PAGES_DIR }}
         ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
         ssh-strict: no
 
+    - name: Publish ontologies
+      run: python ${GITHUB_WORKSPACE}/.github/utils/publish_ontologies.py
+
     - name: Update GitHub Pages
-      run: ${GITHUB_WORKSPACE}/doc/ontodoc/update-pages.sh
-
-  ontologies:
-    name: Ontologies
-    runs-on: ubuntu-latest
-    needs: documentation
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Setup Python 3.7
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
-
-    - name: Install Python dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -U setuptools wheel
-        pip install -r requirements.txt
-
-    - name: Update ontologies
-      run: .github/utils/publish_ontologies.py
+      run: ${GITHUB_WORKSPACE}/${ONTODOC_DIR}/update-pages.sh
