--- a/.github/workflows/update_pages.yml
+++ b/.github/workflows/update_pages.yml
@@ -3,14 +3,16 @@ name: Update GitHub Pages
 on:
   push:
     branches:
-      - 'ontodoc'
-      - '[0-9]+.[0-9]+.[0-9]+'
-      - '[0-9]+.[0-9]+.[0-9]+-*'
+      - 'master'
+    tags:
+      - 'v?[0-9]+.[0-9]+.[0-9]+'
+      - 'v?[0-9]+.[0-9]+.[0-9]+-*'
 
 jobs:
 
   build:
     runs-on: ubuntu-latest
+    if: github.repository == 'BIG-MAP/BattINFO'
 
     steps:
 
