--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -28,3 +28,46 @@ jobs:
           --skip test_namespace \
           --configfile=.github/utils/emmocheck_config.yml \
           battinfo.ttl
+
+  documentation-build:
+    name: Documentation
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Setup Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+
+    - name: Install pandoc 2.1.2
+      run: |
+        sudo apt-get update
+        #sudo apt-get install pandoc  # we need v2.1.2
+        wget https://github.com/jgm/pandoc/releases/download/2.1.2/pandoc-2.1.2-1-amd64.deb
+        sudo apt-get install -y ./pandoc-2.1.2-1-amd64.deb
+
+    - name: Install other dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y graphviz texlive-xetex texlive-latex-extra
+
+    - name: Install Python dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -U setuptools wheel
+        pip install -r requirements.txt
+
+    - name: Setup git identity
+      run: |
+        cd ${GITHUB_WORKSPACE}
+        git config --global user.email "${GIT_USER_EMAIL}"
+        git config --global user.name "${GIT_USER_NAME}"
+
+    - name: Publish ontologies
+      run: python ${GITHUB_WORKSPACE}/.github/utils/publish_ontologies.py
+
+    - name: Update GitHub Pages
+      run: ${GITHUB_WORKSPACE}/${ONTODOC_DIR}/update-pages.sh TEST
