Add required env vars for doc build

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -32,6 +32,11 @@ jobs:
   documentation-build:
     name: Documentation
     runs-on: ubuntu-latest
+    env:
+      ONTODOC_DIR: doc/ontodoc
+      TMP_DIR: tmp
+      PAGES_DIR: gh-pages
+      PUBLISH_ONTOLOGIES_DIR: ontology
 
     steps:
     - name: Checkout repository
