Skip test_quantity_dimension in emmocheck as convention has changed, but is not yet set in stone wrt new rules

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         emmocheck --verbose --check-imported --url-from-catalog \
           --skip test_namespace \
+          --skip test_quantity_dimension \
           --configfile=.github/utils/emmocheck_config.yml \
           battinfo.ttl
 
