--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -46,31 +46,18 @@ jobs:
     - name: Setup Python 3.7
       uses: actions/setup-python@v3
       with:
-        python-version: 3.7
-
-    - name: Install pandoc 2.1.2
-      run: |
-        sudo apt-get update
-        #sudo apt-get install pandoc  # we need v2.1.2
-        wget https://github.com/jgm/pandoc/releases/download/2.1.2/pandoc-2.1.2-1-amd64.deb
-        sudo apt-get install -y ./pandoc-2.1.2-1-amd64.deb
+        python-version: "3.7"
 
     - name: Install other dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y graphviz texlive-xetex texlive-latex-extra
+        sudo apt-get install -y pandoc graphviz texlive-xetex texlive-latex-extra
 
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -U setuptools wheel
         pip install -r requirements.txt
-
-    - name: Setup git identity
-      run: |
-        cd ${GITHUB_WORKSPACE}
-        git config --global user.email "${GIT_USER_EMAIL}"
-        git config --global user.name "${GIT_USER_NAME}"
 
     - name: Publish ontologies
       run: python ${GITHUB_WORKSPACE}/.github/utils/publish_ontologies.py
