--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Run EMMO Check
       run: |
-        emmocheck --verbose --check-imported --url-from-catalog \
+        emmocheck --verbose --url-from-catalog \
           --skip test_namespace \
           --skip test_quantity_dimension \
           --configfile=.github/utils/emmocheck_config.yml \
