--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -33,31 +33,24 @@ jobs:
   documentation-build:
     name: Documentation
     runs-on: ubuntu-latest
-    env:
-      ONTODOC_DIR: doc/ontodoc
-      TMP_DIR: tmp
-      PAGES_DIR: gh-pages
-      PUBLISH_ONTOLOGIES_DIR: ontology
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Setup Python 3.7
+    - name: Setup Python 3.10
       uses: actions/setup-python@v4
       with:
-        python-version: "3.7"
+        python-version: "3.10"
 
-    - name: Install other dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y pandoc graphviz texlive-xetex texlive-latex-extra
-
-    - name: Install Python dependencies
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -U setuptools wheel
-        pip install -r requirements.txt
+        pip install Markdown==3.4.3 rdflib==6.3.2
+
+    - name: Render documentation from md
+      run: python docs/scripts/md_to_html.py
 
     - name: Publish ontologies
       run: python ${GITHUB_WORKSPACE}/.github/utils/publish_ontologies.py
