--- a/.github/workflows/update_ghpages.yml
+++ b/.github/workflows/update_ghpages.yml
@@ -24,10 +24,16 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install Markdown==3.4.3 rdflib==6.3.2  # Add any other dependencies if needed
+        pip install -U setuptools wheel
+        pip install -r requirements_docs.txt
 
     - name: Render documentation from md
       run: python docs/scripts/md_to_html.py
+
+    - name: Build the documentation
+      run: |
+        cd ${GITHUB_WORKSPACE}/docs
+        make html
 
     - name: Commit updated documentation
       run: |
