Finalize new build doc script
Finalize build script.
One can build the documentation simply by running

  python docs/scripts/build.py site

It will then be built in the 'site' folder at the root of the
repository.
It utilizes the md_to_html.py script to generate HTML from all markdown
files in the 'docs' folder and sub-folders (excluding any files found in
'assets', 'css', and 'scripts').

--- a/.github/workflows/update_ghpages.yml
+++ b/.github/workflows/update_ghpages.yml
@@ -27,13 +27,8 @@ jobs:
         pip install -U setuptools wheel
         pip install -r requirements_docs.txt
 
-    - name: Render documentation from md
-      run: python docs/scripts/md_to_html.py
-
-    - name: Build the documentation
-      run: |
-        cd ${GITHUB_WORKSPACE}/docs
-        make html
+    - name: Build documentation
+      run: python docs/scripts/build.py site
 
     - name: Commit updated documentation
       run: |
