--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -47,10 +47,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -U setuptools wheel
-        pip install -r requirements_docs.txt
+        pip install -r requirements_docs.txt -r requirements.txt
 
     - name: Build documentation
-      run: python ${GITHUB_WORKSPACE}/docs/scripts/build.py site
+      run: python ${GITHUB_WORKSPACE}/docs/scripts/build.py site && ls -lahR site
 
     - name: Publish ontologies
       run: python ${GITHUB_WORKSPACE}/.github/utils/publish_ontologies.py
