--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Set up Python 3.7
       uses: actions/setup-python@v5
       with:
-        python-version: "3.7"
+        python-version: '3.7'
 
     - name: Install EMMOntoPy
       run: |
@@ -29,33 +29,3 @@ jobs:
           --skip test_quantity_dimension \
           --configfile=.github/utils/emmocheck_config.yml \
           battinfo.ttl
-
-  documentation-build:
-    name: Documentation
-    runs-on: ubuntu-latest
-
-    env:
-      PUBLISH_DOCS_DIR: site
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
-    - name: Setup Python 3.10
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.10"
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -U setuptools wheel
-        pip install -r requirements_docs.txt -r requirements.txt
-
-    - name: Build documentation
-      run: python docs/scripts/build.py ${PUBLISH_DOCS_DIR} && ls -lahR ${PUBLISH_DOCS_DIR}
-
-    - name: '"Publish" ontologies'
-      run: python .github/utils/publish_ontologies.py && ls -lahR ${PUBLISH_DOCS_DIR}
-      env:
-        PUBLISH_ONTOLOGIES_DIR: ontology
