--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -32,8 +32,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -U setuptools wheel
-        pip install -r sphinx/requirements.txt
-        pip install Markdown==3.4.3 rdflib==6.3.2  # Add any other dependencies if needed
+        pip install -r requirements_docs.txt
 
     - name: Render documentation from ttl
       run: python sphinx/ttl_to_rst.py
