--- a/sphinx/requirements.txt
+++ b/sphinx/requirements.txt
@@ -1,33 +1,33 @@
 accessible-pygments==0.0.4
-alabaster==0.7.13
+alabaster==0.7.16
 Babel==2.14.0
-beautifulsoup4==4.12.2
-certifi==2023.11.17
+beautifulsoup4==4.12.3
+certifi==2024.2.2
 charset-normalizer==3.3.2
 docutils==0.20.1
 idna==3.6
 imagesize==1.4.1
-importlib-metadata==6.7.0
+importlib-metadata==7.0.2
 Jinja2==3.1.3
-MarkupSafe==2.1.3
-nbsphinx
+MarkupSafe==2.1.5
+nbsphinx==0.9.3
 packaging==23.2
-pandoc
+pandoc==2.3
 pydata-sphinx-theme==0.13.3
 Pygments==2.17.2
 pytz==2024.1
 requests==2.31.0
 snowballstemmer==2.2.0
-soupsieve==2.4.1
-Sphinx==5.3.0
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
+soupsieve==2.5
+Sphinx==7.2.6
+sphinx-design==0.5.0
+sphinxcontrib-applehelp==1.0.8
+sphinxcontrib-devhelp==1.0.6
 sphinxcontrib-globalsubs==0.1.1
-sphinxcontrib-htmlhelp==2.0.1
+sphinxcontrib-htmlhelp==2.0.5
 sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-typing_extensions==4.7.1
-urllib3==2.0.7
-zipp==3.15.0
-sphinx-design
+sphinxcontrib-qthelp==1.0.7
+sphinxcontrib-serializinghtml==1.1.10
+typing_extensions==4.10.0
+urllib3==2.2.1
+zipp==3.18.1
