--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -32,16 +32,16 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -U setuptools wheel
-        pip install -r requirements_docs.txt
+        pip install -r requirements_docs.txt -r sphinx/requirements.txt
 
     - name: Render documentation from ttl
       run: python sphinx/ttl_to_rst.py
 
     - name: Build HTML
-      uses: ammaraskar/sphinx-action@master
-      with:
-        docs-folder: "sphinx/"
-        pre-build-command: "apt-get update -y; apt-get install -y pandoc"
+      run: |
+        apt-get update && apt-get install -y pandoc
+        make html
+      working-directory: sphinx
 
     # Still upload built documentation as an artifact if not deploying
     # This is to provide the opportunity to download the built documentation
