--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -39,7 +39,7 @@ jobs:
 
     - name: Build HTML
       run: |
-        apt-get update && apt-get install -y pandoc
+        sudo apt-get update && sudo apt-get install -y pandoc
         make html
       working-directory: sphinx
 
