--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -30,6 +30,10 @@ jobs:
 
     - name: Install dependencies
       run: |
+        # System dependencies
+        sudo apt-get update && sudo apt-get install -y pandoc
+
+        # Python dependencies
         python -m pip install --upgrade pip
         pip install -U setuptools wheel
         pip install -r requirements_docs.txt -r sphinx/requirements.txt
@@ -38,9 +42,7 @@ jobs:
       run: python sphinx/ttl_to_rst.py
 
     - name: Build HTML
-      run: |
-        sudo apt-get update && sudo apt-get install -y pandoc
-        make html
+      run: make html
       working-directory: sphinx
 
     # Still upload built documentation as an artifact if not deploying
