--- a/sphinx/requirements.txt
+++ b/sphinx/requirements.txt
@@ -2,32 +2,32 @@ accessible-pygments==0.0.5
 alabaster==0.7.16
 Babel==2.15.0
 beautifulsoup4==4.12.3
-certifi==2024.2.2
+certifi==2024.7.4
 charset-normalizer==3.3.2
 docutils==0.20.1
-idna==3.6
+idna==3.7
 imagesize==1.4.1
-importlib-metadata==8.0.0
+importlib-metadata==8.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
-nbsphinx==0.9.3
-packaging==24.1
+nbsphinx==0.9.4
+packaging==23.2  # EMMOntoPy does not support v24
 pandoc==2.3
-pydata-sphinx-theme==0.13.3
+pydata-sphinx-theme==0.15.4
 Pygments==2.18.0
 pytz==2024.1
 requests==2.32.3
 snowballstemmer==2.2.0
 soupsieve==2.5
 Sphinx==7.2.6
-sphinx-design==0.5.0
-sphinxcontrib-applehelp==1.0.8
-sphinxcontrib-devhelp==1.0.6
+sphinx-design==0.6.0  # does not support sphinx v8
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
 sphinxcontrib-globalsubs==0.1.1
-sphinxcontrib-htmlhelp==2.0.5
+sphinxcontrib-htmlhelp==2.1.0
 sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.7
-sphinxcontrib-serializinghtml==1.1.10
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
 typing_extensions==4.12.2
-urllib3==2.2.1
+urllib3==2.2.2
 zipp==3.19.2
