Update docs to remove all build warnings
All warnings have been removed by:
- Move `!pip install` statements to a separate cell in all notebooks,
  making the cell "shellscript" code and add a sentence immediately
  before stating the same thing.
- Add all files to a Sphinx `toctree` tag, specifically extending the
  header nav with the "More" dropdown, which includes "contribute",
  "tools", and "resources".
- Find online and add the image for the Protégé configuration.

Update the configuration to remove the primary sidebar from pages that
have no section navigation.

Since no warnings are produced (locally) now, the CI workflow has been
updated to include the `-W` flag for sphinx-build, which treats warnings
as errors during the build.

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -44,6 +44,10 @@ jobs:
     - name: Build HTML
       run: make html
       working-directory: sphinx
+      env:
+        # -v: Verbose
+        # -W: Turn warnings into errors
+        SPHINXOPTS: "-v -W"
 
     # Still upload built documentation as an artifact if not deploying
     # This is to provide the opportunity to download the built documentation
