--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -1,4 +1,4 @@
-name: "Sphinx: Render docs"
+name: "docs"
 
 on: 
   push:
@@ -32,15 +32,15 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -U setuptools wheel
-        pip install -r requirements_docs.txt
+        pip install -r docs/requirements.txt
 
     - name: Render documentation from ttl
-      run: python sphinx/ttl_to_rst.py
+      run: python docs/scripts/ttl_to_rst.py
 
     - name: Build HTML
       uses: ammaraskar/sphinx-action@master
       with:
-        docs-folder: "sphinx/"
+        docs-folder: "docs/"
         pre-build-command: "apt-get update -y; apt-get install -y pandoc"
 
     # Still upload built documentation as an artifact if not deploying
@@ -49,7 +49,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: documentationHTML
-        path: sphinx/_build/html/
+        path: docs/_build/html/
 
     # Only deploy if pushing to 'master'
     - name: Deploy
@@ -57,4 +57,4 @@ jobs:
       if: github.ref == 'refs/heads/master' && github.event_name == 'push'
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: sphinx/_build/html
+        publish_dir: docs/_build/html
