--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -9,13 +9,15 @@ idna==3.6
 imagesize==1.4.1
 importlib-metadata==6.7.0
 Jinja2==3.1.3
+Markdown==3.4.3
 MarkupSafe==2.1.3
 nbsphinx
 packaging==23.2
 pandoc
 pydata-sphinx-theme==0.13.3
 Pygments==2.17.2
-pytz==2023.3.post1
+pytz==2023.3.
+rdflib==6.3.2
 requests==2.31.0
 snowballstemmer==2.2.0
 soupsieve==2.4.1
